fixes logo spacing

--- a/src/shared/styled/LandingPage.css
+++ b/src/shared/styled/LandingPage.css
@@ -146,12 +146,11 @@ body {
 #logo-container {
     margin-top: .5em;
     margin-bottom: .5em;
-    margin-left: -2.5em;
     display: flex;
     flex-direction: row;
-    height: 2em;
-    width: 2em;
     gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 #resume-container {
